tests/rosetta/out/Smalltalk/currying.out
/tmp/currying.st:6: parse error, expected ']'
